Fixed nav search overflow behavior on desktop

--- a/src/components/NavBar/OmniSearch.styl
+++ b/src/components/NavBar/OmniSearch.styl
@@ -2,6 +2,7 @@
     display: inline-block;
     padding: 0.5rem;
     themed background-color navbar-background-color
+    overflow-y: auto;
 
     img {
         width: 15px;
